--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   
 </head>
 <body class="flex">
-  <div class="flex">
+  <main class="flex">
       <img src="images/image-qr-code.png" alt="qr-code of frontend mentor">
-      <h2>Improve your front-end skills by building projects</h2>
+      <h1>Improve your front-end skills by building projects</h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coning skills to the next level
       </p>
-  </div>
+  </main>
 </body>
 </html>
